--- a/config.def.json
+++ b/config.def.json
@@ -1,5 +1,5 @@
 {
-    "deployment": "development",
+    "deployment": "",
     "express": {
         "view engine": "ejs",
         "views": "templates"
