--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "markdown": "^0.5.0"
+    "markdown-it": "^12.0.6"
   }
 }
