create template to auto config.json

--- a/config.def.json
+++ b/config.def.json
@@ -12,6 +12,7 @@
     "contact": {
         "email": "jackmaverickdavidson@gmail.com",
         "discord": "bogo-sort#0860",
-        "linkedin": "https://linkedin.com/in/jackmdavidson"
+        "linkedin": "https://linkedin.com/in/jackmdavidson",
+        "github": "https://github.com/jack-davidson"
     }
 }
