--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "markdown-it": "^12.0.6"
+    "markdown-it": "^12.0.6",
+    "striptags": "^3.1.1"
   }
 }
