updated config file

--- a/config.def.json
+++ b/config.def.json
@@ -13,6 +13,7 @@
         "email": "jackmaverickdavidson@gmail.com",
         "discord": "bogo-sort#0860",
         "linkedin": "https://linkedin.com/in/jackmdavidson",
-        "github": "https://github.com/jack-davidson"
+        "github": "https://github.com/jack-davidson",
+        "irc": "J0ND03"
     }
 }
